--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <body>
   <div class="herosection">
     <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-      <div class="navwrap"><a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Logo-Gregor.svg" alt="Gregor König – The Voice" class="logo"></a>
+      <div class="navwrap"><a href="index" aria-current="page" class="brand w-nav-brand w--current"><img src="images/Logo-Gregor.svg" alt="Gregor König – The Voice" class="logo"></a>
         <div class="div-block-9">
-          <nav role="navigation" class="nav-menu w-nav-menu"><a href="about.html" class="nav-link w-nav-link">About</a><a href="portfolio.html" class="nav-link w-nav-link">Portfolio</a><a href="audio.html" class="nav-link w-nav-link">Audio</a><a href="kontakt.html" class="nav-link w-nav-link">Kontakt</a></nav>
+          <nav role="navigation" class="nav-menu w-nav-menu"><a href="about" class="nav-link w-nav-link">About</a><a href="portfolio" class="nav-link w-nav-link">Portfolio</a><a href="audio.html" class="nav-link w-nav-link">Audio</a><a href="kontakt.html" class="nav-link w-nav-link">Kontakt</a></nav>
           <div class="audiowrapper">
             <div class="w-embed w-script">
               <div>
